--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🔍 Сиамские нейронные сети для детектирования дубликатов изображений</h1>
-            <p class="subtitle">Дипломный проект для конференции НГТУ НТИ-2025</p>
+            <h1>🔍 CopyrightControl </h1>
         </header>
 
         <div class="demo-section">
@@ -116,11 +115,6 @@
                 <canvas id="metricsChart" width="400" height="200"></canvas>
             </div>
         </div>
-
-        <footer>
-            <p>Дипломная работа для XIX Всероссийской научной конференции "Наука. Технологии. Инновации"</p>
-            <p>НГТУ НЭТИ, 2025</p>
-        </footer>
     </div>
 
     <script src="script.js"></script>
