--- a/index.html
+++ b/index.html
@@ -222,18 +222,19 @@ Response:
                 </div>
                 <div class="footer-section">
                     <h4>Контакты</h4>
-                    <p>Email: contact@copyrightcontrol.ai</p>
-                    <p>Телефон: +7 (XXX) XXX-XXXX</p>
+                    <p>Email: pylenok.0408@yandex.ru</p>
+                    <p>Телефон: +7 (913) 908-28-97</p>
+                    <p>Telegram: @nikday38</p>
                 </div>
                 <div class="footer-section">
-                    <h4>Технологии</h4>
-                    <p>Сиамские нейросети</p>
-                    <p>Компьютерное зрение</p>
-                    <p>Векторный поиск</p>
+                    <h4>Услуги</h4>
+                    <p>Детектирование дубликатов</p>
+                    <p>Защита авторских прав</p>
+                    <p>Анализ схожести контента</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 CopyrightControl. Все права защищены.</p>
+                <p>&copy; 2025 CopyrightControl. Все права защищены.</p>
             </div>
         </footer>
     </div>
